--- a/style.css
+++ b/style.css
@@ -85,4 +85,118 @@
   .btn a{
       color: white;
   }
+  @media screen and (max-width: 1280px) {
+   
+      .container{
+          margin-top: 10vh;
+       
+          
+          /* justify-content: space-evenly; */
+          
+      }
+      img{
+          width: 85%;
+          max-width: 300px;
+          height: auto;
+      }
+      .left
+  {
+      /* border: 2px solid red; */
+      margin-top: 15vh;
+      width: 50vw;
+      margin-left: 15vh;
+     
+      
+  }
+  h2{
+      font-size: 30px;
+  }
+  h1{
+      font-size: 40px;
+  }
+  p{
+      font-size: large;
+  }
+  
+  .btn{
+     
+     
+     font-size: 15px;
+    
+  
+  
+      
+     
+       border-radius: 20px;
+      margin-top: 4px;
+     
+      
+      
+  }
+  }
+  @media screen and (max-width: 950px) {
+     
+     
+      .left
+  {
+     
+      
+      margin-left: 10vh;
+     
+      
+  }
+  }
+  @media screen and (max-width: 615px) {
+    
+     
+      .left
+  {
+     
+      
+      margin-left: 9vh;
+     
+      
+  }
+  h2{
+      font-size: 20px;
+  }
+  h1{
+      font-size: 30px;
+  }
+  p{
+      font-size:medium;
+  }
+  img{
+      width: 65%;
+      max-width: 250px;
+      height: auto;
+  }
+  .navdiv {
+      display: flex;
+      align-items:center;
+      justify-content: center;
+    }
+    li a {
+   
+     
+      margin-right: 4vh;
+    }
+  }
+  @media screen and (max-width: 500px) {
+    body{
+      overflow:none;
+    }
+  .container{
+      
+      flex-wrap: wrap-reverse;
+      margin-top: 1vh;
+  }
+  li a {
+   
+     
+      margin-right: 1vh;
+    }
+  
+  
+  }
   
